# Jigisa-RAG-System

./: README.md
Back-End/: .gitignore  .sample_env  check_qdrant.py  check_qdrant_meta.py  main.py  pyproject.toml
Back-End/PRD/: PRD1-Data-Ingestion-pipeline.txt  PRD2-Semantic-Router.txt  PRD3-Guardrails.txt  PRD4-AuthN-AuthZ.txt  PRD5-Evalution.txt
Back-End/app/auth/: dependencies.py  router.py  schemas.py  service.py  utils.py
Back-End/app/chat/: __init__.py  history_service.py  router.py  schemas.py  service.py
Back-End/app/config/: settings.py
Back-End/app/core/: database.py  embeddings.py  llm.py  vector_store.py
Back-End/app/debug/: inspect_qdrant.py  reingest_handbook.py
Back-End/app/evaluation/: evaluate.py  ground_truth.json  router.py  runner.py
Back-End/app/guardrails/: __init__.py  input_guardrails.py  output_guardrails.py  schemas.py  service.py
Back-End/app/ingestion/: __init__.py  parsing.py  router.py  schemas.py
Back-End/app/models/: chat_history.py  guardrail_log.py  refresh_token.py  routing_log.py  user.py
Back-End/app/routing/: __init__.py  router.py  routes.py  schemas.py  service.py
Front-End/: package-lock.json  package.json
Front-End/src/app/: globals.css  layout.tsx  page.tsx
Front-End/src/app/admin/: page.tsx
Front-End/src/app/admin/evaluations/: page.tsx
Front-End/src/app/chat/: page.tsx
Front-End/src/context/: AuthContext.tsx
Front-End/src/lib/: api.ts
